src/style.css
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 300 900;
  font-display: swap;
  src: url(./fonts/Rubik_latin-ext.woff2) format('woff2');
  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 300 900;
  font-display: swap;
  src: url(./fonts/Rubik_latin.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 300 900;
  font-display: swap;
  src: url(./fonts/Rubik_cyrillic.woff2) format('woff2');
  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}

html,
body {
  box-sizing: border-box;
  height: 100%;
  padding: 0;
  margin: 0 auto;
  font-family: 'Rubik', Geneva, Verdana, sans-serif;
  font-size: 16px;
}

body {
  max-width: 1024px;
  --color-black: #0d1b2a;
  --color-accent-dark: #1b263b;
  --color-accent: #415a77;
  --color-grey: #778da9;
  --color-white: #e0e1dd;
  --color-youtube: #ff0033;
  background-color: var(--color-white);
  color: var(--color-white);

  @media (prefers-color-scheme: dark) {
    background-color: var(--color-black);
    color: var(--color-black);
  }
}

.wrapper {
  box-sizing: border-box;
  min-height: 100%;
  padding: 16px 32px;
  display: flex;
  flex-direction: column;

  @media (max-width:560px) {
    padding: 8px 16px;
  }
}

header,
footer {
  flex-grow: 0;
  flex-shrink: 0;
}

header p {
  font-size: 2rem;
  font-weight: 700;
  margin: 1rem 0;
  padding: 0;
  color: var(--color-black);

  @media (prefers-color-scheme: dark) {
    color: var(--color-grey);
  }

  @media (max-width:560px) {
    margin: 0.5rem 0;
    font-size: 1.5rem;
  }
}

main {
  flex-grow: 1;
}

a {
  text-decoration: none;
  cursor: pointer;
  color: var(--color-accent-dark);
}

.film {
  display: flex;
  gap: 1.5em;
  margin: 1rem 0;
  padding: 1rem;
  background-color: var(--color-accent);
  border-radius: calc(1rem + 12px);

  @media (max-width:560px) {
    flex-direction: column;
    margin: 0.5rem 0;
    gap: 1rem;
  }
}

.film-poster {
  display: block;
  flex-shrink: 0;
  flex-grow: 0;
  width: 250px;
  height: auto;
  border-radius: 1rem;
  object-fit: contain;
  align-self: flex-start;

  @media (max-width:560px) {
    max-width: 150px;
    align-self: center;
  }
}

.zero-poster {
  align-self: center;

  @media (max-width:560px) {
    max-width: 150px;
  }
}

.film-info {
  flex-grow: 1;
}

.film-title {
  font-weight: 600;

  @media (max-width:560px) {
    margin: 0 0 0.5rem 0;
    font-size: 1.3rem;
    text-align: center;
  }
}

.film-trailer {
  display: flex;
  gap: 0.5rem;
  align-items: center;
  width: fit-content;
  border-radius: 1rem;
  padding: 0.5rem 1rem;
  background-color: var(--color-grey);

  @media (max-width:560px) {
    margin: 0 auto;
  }
}

.film-trailer .icon {
  display: block;
  width: 32px;
  height: 32px;
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: contain;
  mask-image: url("./svg/youtube.svg");
  background-color: var(--color-black);
}

.film-trailer:hover,
.film-trailer:focus-visible {
  background-color: var(--color-white);
}


.film-trailer:hover .icon,
.film-trailer:focus-visible .icon {
  background-color: var(--color-youtube);
}

.film-screening {
  list-style: none;
  margin: 2rem 0;
  padding: 0;
  display: grid;
  gap: 16px;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));

  @media (max-width:560px) {
    margin: 1rem 0;
  }
}

.film-screening li {
  flex-grow: 1;
}

.film-screening li>p {
  margin: 0;
  margin-bottom: 0.5rem;
  font-size: 1.1rem;
  font-weight: 500;
}

/* .film-screening--weekend {
  color: var(--color-accent-dark);

  @media (prefers-color-scheme: dark) {
    color: var(--color-white);
  }
} */

.film-tickets {
  display: flex;
  gap: 8px;
  align-items: center;
  width: fit-content;
  border-radius: 1rem;
  padding: 0.7rem 0.8rem;
  background-color: var(--color-grey);
}


.film-tickets:focus-visible,
.film-tickets:hover {
  background-color: var(--color-accent-dark);
  color: var(--color-white)
}

.icon-tickets {
  display: block;
  width: 26px;
  height: 26px;
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: contain;
  mask-image: url("./svg/ticket.svg");
  background-color: var(--color-black);
}

.film-tickets:hover .icon-tickets,
.film-tickets:focus-visible .icon-tickets {
  background-color: var(--color-grey);
}

footer {
  align-self: center;
}

.footer-link {
  color: var(--color-accent-dark);
  display: flex;
  gap: 12px;
  align-items: center;

  @media (prefers-color-scheme: dark) {
    color: var(--color-grey);
  }
}

.footer-telegram {
  display: block;
  width: 22px;
  height: 22px;
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: contain;
  mask-image: url("./svg/telegram.svg");
  background-color: var(--color-accent-dark);

  @media (prefers-color-scheme: dark) {
    background-color: var(--color-grey);
  }
}

.footer-link:hover,
.footer-link:focus-visible {
  color: var(--color-grey);

  @media (prefers-color-scheme: dark) {
    color: var(--color-white);
  }
}

.footer-link:hover .footer-telegram,
.footer-link:focus-visible .footer-telegram {
  background-color: var(--color-grey);

  @media (prefers-color-scheme: dark) {
    background-color: var(--color-white);
  }
}

